First commit of a template style

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h1 style="text-align: center;">Kyzz</h1>
 
       <blockquote style="text-align: center;">Compone Accomoda Supera</blockquote>
-      <blockquote style="text-align: center;">&dash;Anonymous, Improvise, Adapt, Overcome.</blockquote>
+      <blockquote style="text-align: center;">&dash;Anonymous, Improvise, Adapt, Overcome.&dash;</blockquote>
 	  <p>This is the online webspace for, Kevin Zita, who currently resides in Kent, Ohio and is studying Software Development.  Any time that is not spent online he enjoys popular television shows, movies, and electronic music.</p>
 
 	  <p>Here are some resources to get in contact with Kyzz,and some other places to see what he's up to.</p>
