Added blog link

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <ul type="square">
 		<li><a href="kevinsresume.html">Kevin's resum&eacute;</a></li>
 		<li><a href="https://github.com/kzisme">Kevin's Github Profile</a>,</li>
+    <li><a  href="linkhere">Kevin's soon to come blog.</a></li>
       </ul>
         <p style="text-align: center;">If you haven't found the answer to your question here, or would like to just say "Hello!" you can reach me at kzita@kent.edu</p>
   <!--<p style="text-align: center;"><img src="filenamehere.jpg" width="00px" /></p>-->
