Fixed styling errors

--- a/kevinsresume.html
+++ b/kevinsresume.html
@@ -31,6 +31,7 @@
 
 				</span>
 		</p>
+		</div>
 
 
 		<div class="section2">
@@ -72,6 +73,7 @@
 					I was also in charge of opening and closing operations of the store.
 				</p>
 			</div>
+		</div>
 
 		<div class="section2">
 			<h2>Computer Skills</h2>
