Fixed small typos and errors

--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
       <h1 style="text-align: center;">Kyzz</h1>
 
       <blockquote style="text-align: center;">Compone Accomoda Supera</blockquote>
-      <blockquote style="text-align: center;">&dash;Anonymous, Improvise, Adapt, Overcome.&dash;</blockquote>
-	  <p>This is the online webspace for, Kevin Zita, who currently resides in Kent, Ohio and is studying Software Development.  Any time that is not spent online he enjoys popular television shows, movies, and electronic music.</p>
+      <blockquote style="text-align: center;">&dash;Improvise, Adapt, Overcome.&dash;</blockquote>
+	  <p>This is the online webspace for, Kevin Zita, who currently resides in Kent, Ohio and is studying Software Development.  Any time that is not spent online he enjoys popular television shows, movies, and many different types of music.</p>
 
 	  <p>Here are some resources to get in contact with Kyzz,and some other places to see what he's up to.</p>
 
       <ul type="square">
 		<li><a href="kevinsresume.html">Kevin's resum&eacute;</a></li>
 		<li><a href="https://github.com/kzisme">Kevin's Github Profile</a>,</li>
-    <li><a  href="linkhere">Kevin's soon to come blog.</a></li>
+    <li><a  href="about:blank">Kevin's soon to come blog.</a></li>
       </ul>
         <p style="text-align: center;">If you haven't found the answer to your question here, or would like to just say "Hello!" you can reach me at kzita@kent.edu</p>
   <!--<p style="text-align: center;"><img src="filenamehere.jpg" width="00px" /></p>-->
