--- a/kevinsresume.html
+++ b/kevinsresume.html
@@ -84,7 +84,7 @@
 				</li>
 
 				<li>
-					Small projects of my own written in Python.  All of which can be found on <a href="https://github.com/kzisme">my Github</a>
+					Small projects of my own written in Python, all of which can be found on <a href="https://github.com/kzisme">my Github</a>
 				</li>
 
 				<li>
@@ -92,7 +92,7 @@
 				</li>
 
 				<li>
-					Gained knowldge while hosting my own website, and setting up Wordpress and other services for other people.
+					Gained knowledge while hosting my own website, and setting up Wordpress and other services for other people.
 				</li>
 
 				<li>
